--- a/temphumid-win/libtemphumid.net/libtemphumid.net.vcxproj
+++ b/temphumid-win/libtemphumid.net/libtemphumid.net.vcxproj
@@ -151,6 +151,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\libtemphumid\libtemphumid.vcxproj">
+      <Project>{186bf762-4c6c-4398-8f89-3a0437f49292}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
