--- a/temphumid-win/libtemphumid.net/libtemphumid.net.vcxproj
+++ b/temphumid-win/libtemphumid.net/libtemphumid.net.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
